# soem-master

./: .gitignore  CMakeLists.txt  README.md  build.sh  format.sh
cfg/: ethercat_cfg.yaml
cmake/: GetSoem.cmake  NamespaceTool.cmake
src/: CMakeLists.txt  main.cc
src/backend/: CMakeLists.txt  backend.cc  backend.h  slave_node.cc  slave_node.h
src/command/: CMakeLists.txt  command.cc  command.h
src/ethercat_control/: CMakeLists.txt  ethercat_com.h  ethercat_control.cc  ethercat_control.h  ethercat_manager.cc  ethercat_manager.h  ethercat_node.h  ethercat_sem.h  ethercat_utils.cc  ethercat_utils.h
src/log/: ethercat_log.h
src/master/: master.cc  master.h  slave_node.cc  slave_node.h  utils.h
src/ui/: ui.cc  ui.h
